gen/customsearch/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-customsearch1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/customsearch/v1/lib)
error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2223:35
     |
2223 |             filter: Option<crate::siterestrict::params::ListFilter>,
     |                                   ^^^^^^^^^^^^
     |                                   |
     |                                   unresolved import
     |                                   help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2229:43
     |
2229 |             img_color_type: Option<crate::siterestrict::params::ListImgColorType>,
     |                                           ^^^^^^^^^^^^
     |                                           |
     |                                           unresolved import
     |                                           help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2230:47
     |
2230 |             img_dominant_color: Option<crate::siterestrict::params::ListImgDominantColor>,
     |                                               ^^^^^^^^^^^^
     |                                               |
     |                                               unresolved import
     |                                               help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2231:37
     |
2231 |             img_size: Option<crate::siterestrict::params::ListImgSize>,
     |                                     ^^^^^^^^^^^^
     |                                     |
     |                                     unresolved import
     |                                     help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2232:37
     |
2232 |             img_type: Option<crate::siterestrict::params::ListImgType>,
     |                                     ^^^^^^^^^^^^
     |                                     |
     |                                     unresolved import
     |                                     help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2235:31
     |
2235 |             lr: Option<crate::siterestrict::params::ListLr>,
     |                               ^^^^^^^^^^^^
     |                               |
     |                               unresolved import
     |                               help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2240:33
     |
2240 |             safe: Option<crate::siterestrict::params::ListSafe>,
     |                                 ^^^^^^^^^^^^
     |                                 |
     |                                 unresolved import
     |                                 help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2241:40
     |
2241 |             search_type: Option<crate::siterestrict::params::ListSearchType>,
     |                                        ^^^^^^^^^^^^
     |                                        |
     |                                        unresolved import
     |                                        help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2243:47
     |
2243 |             site_search_filter: Option<crate::siterestrict::params::ListSiteSearchFilter>,
     |                                               ^^^^^^^^^^^^
     |                                               |
     |                                               unresolved import
     |                                               help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2291:52
     |
2291 |             pub fn filter(&mut self, value: crate::siterestrict::params::ListFilter) -> &mut Self {
     |                                                    ^^^^^^^^^^^^
     |                                                    |
     |                                                    unresolved import
     |                                                    help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2323:31
     |
2323 |                 value: crate::siterestrict::params::ListImgColorType,
     |                               ^^^^^^^^^^^^
     |                               |
     |                               unresolved import
     |                               help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2331:31
     |
2331 |                 value: crate::siterestrict::params::ListImgDominantColor,
     |                               ^^^^^^^^^^^^
     |                               |
     |                               unresolved import
     |                               help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2339:31
     |
2339 |                 value: crate::siterestrict::params::ListImgSize,
     |                               ^^^^^^^^^^^^
     |                               |
     |                               unresolved import
     |                               help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2347:31
     |
2347 |                 value: crate::siterestrict::params::ListImgType,
     |                               ^^^^^^^^^^^^
     |                               |
     |                               unresolved import
     |                               help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2363:48
     |
2363 |             pub fn lr(&mut self, value: crate::siterestrict::params::ListLr) -> &mut Self {
     |                                                ^^^^^^^^^^^^
     |                                                |
     |                                                unresolved import
     |                                                help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2388:50
     |
2388 |             pub fn safe(&mut self, value: crate::siterestrict::params::ListSafe) -> &mut Self {
     |                                                  ^^^^^^^^^^^^
     |                                                  |
     |                                                  unresolved import
     |                                                  help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2395:31
     |
2395 |                 value: crate::siterestrict::params::ListSearchType,
     |                               ^^^^^^^^^^^^
     |                               |
     |                               unresolved import
     |                               help: a similar path exists: `crate::cse::siterestrict`

error[E0433]: failed to resolve: unresolved import
    --> gen/customsearch/v1/lib/src/lib.rs:2408:31
     |
2408 |                 value: crate::siterestrict::params::ListSiteSearchFilter,
     |                               ^^^^^^^^^^^^
     |                               |
     |                               unresolved import
     |                               help: a similar path exists: `crate::cse::siterestrict`

error[E0423]: expected value, found struct `siterestrict::SiterestrictActions`
    --> gen/customsearch/v1/lib/src/lib.rs:1225:13
     |
1225 |             siterestrict::SiterestrictActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `siterestrict::SiterestrictActions { /* fields */ }`?

error: aborting due to 19 previous errors

Some errors have detailed explanations: E0423, E0433.
For more information about an error, try `rustc --explain E0423`.
error: Could not compile `google-customsearch1`.

To learn more, run the command again with --verbose.
